cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_70.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/cast/c_ofb64.c:57: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/cast/c_ofb64.c:57:9: Write of unused value
55.           iv = ivec;
56.           l2n(v0, iv);
57.           l2n(v1, iv);
              ^
58.       }
59.       t = v0 = v1 = ti[0] = ti[1] = 0;
